[gd_scene load_steps=3 format=3 uid="uid://scene_hierarchy_ui"]

[ext_resource type="Script" uid="uid://scene_hierarchy_ui_script" path="res://src/ui/scene_hierarchy_ui.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.12, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.35, 0.5, 1.0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SceneHierarchyUI" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.8, 1.0, 1.0)
theme_override_font_sizes/font_size = 18
text = "üìä Scene Hierarchy"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SearchBar" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1.0, 1.0)
theme_override_colors/caret_color = Color(0.7, 0.8, 1.0, 1.0)
theme_override_font_sizes/font_size = 14
placeholder_text = "üîç Filter nodes..."
clear_button_enabled = true

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1.0)
theme_override_font_sizes/font_size = 14
allow_reselect = true
hide_folding = false
hide_root = false
scroll_horizontal_enabled = true
scroll_vertical_enabled = true

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.55, 0.65, 1.0)
theme_override_font_sizes/font_size = 12
text = "0 nodes"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8
alignment = 1

[node name="RefreshButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 28)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1.0, 1.0)
theme_override_font_sizes/font_size = 12
text = "üîÑ Refresh"

[node name="CollapseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 28)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1.0, 1.0)
theme_override_font_sizes/font_size = 12
text = "‚ñº Collapse"

[node name="ExpandButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 28)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1.0, 1.0)
theme_override_font_sizes/font_size = 12
text = "‚ñ≤ Expand"
